<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="124dp"
        android:background="@null"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <EditText
        android:id="@+id/username_EditText"
        style="@style/editTextStyles"
        android:layout_below="@id/my_toolbar"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/email_EditText"
        style="@style/editTextStyles"
        android:layout_below="@id/username_EditText"
        android:layout_margin="8dp"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:hint="@string/email"
        android:inputType="text" />

    <EditText
        android:id="@+id/w_a_y_EditText"
        style="@style/editTextStyles"
        android:layout_below="@id/email_EditText"
        android:drawableLeft="@drawable/ic_speaker_notes_black_24dp"
        android:drawableStart="@drawable/ic_speaker_notes_black_24dp"
        android:hint="@string/writeAboutYourself"
        android:inputType="textLongMessage"
        android:paddingBottom="32dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/w_a_y_EditText"
        android:layout_centerHorizontal="true"
        android:text="@string/next"
        android:textAllCaps="true" />
</RelativeLayout>
