<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/details_background"
    tools:context=".DetailsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@null"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ImageView
        android:id="@+id/user_image_view"
        android:layout_width="200dp"
        android:background="@drawable/img"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/username_text_view"
        style="@style/textViewStyles"
        android:layout_below="@id/user_image_view"
        android:text="@string/demoUsername" />

    <TextView
        android:id="@+id/user_email_text_view"
        style="@style/textViewStyles"
        android:layout_below="@id/username_text_view"
        android:text="@string/demoEmail" />

    <TextView
        android:id="@+id/description_text_view"
        style="@style/textViewStyles"
        android:layout_below="@id/user_email_text_view"
        android:gravity="center"
        android:lines="2"
        android:text="@string/demoDescription" />
</RelativeLayout>